--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -1,47 +1,45 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false">
-            <ion-item routerLink="/dashboard/home">
-              <ion-label>
-                GUTHABEN
-              </ion-label>
-            </ion-item>
-            <ion-item routerLink="/dashboard/profile">
-              <ion-label>
-                PROFIL
-              </ion-label>
-            </ion-item>
-            <ion-item routerLink="/dashboard/vertage">
-              <ion-label>
-                VERTAGE
-              </ion-label>
-            </ion-item>
-            <ion-item routerLink="/dashboard/income-history">
-              <ion-label>
-                HISTORIE
-              </ion-label>
-            </ion-item>
-            <ion-item routerLink="/dashboard/setup">
-              <ion-label>
-                SETUP
-              </ion-label>
-            </ion-item>
-            <ion-item routerLink="/login">
-              <ion-label>
-                LOG OUT
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
+    <ion-menu style="width: 100%; height: 100%">
+      <div class="header">
+        <div class="topTabs">
+          <h3 [class.active]="selected !== 'assessment' " (click)="setTab('assessment')" style="cursor: pointer;">
+            Assessments</h3>
+          <h3 [class.active]="selected !== 'battery' " (click)="setTab('battery')" style="cursor: pointer;">Batteries
+          </h3>
+        </div>
+        <div class="bottomTabs" *ngIf="selected === 'battery' ">
+          <ion-icon name="add-circle-outline"></ion-icon>
+          <h5>Create Assessment Battery</h5>
+        </div>
+        <div class="bottomTabs" *ngIf="selected === 'assessment' ">
+          <ion-icon name="add-circle-outline"></ion-icon>
+          <h5>do something here??</h5>
+        </div>
+      </div>
+      <div [ngSwitch]="selected" class="content">
+        <div *ngSwitchCase="'battery'" class="content">
+            <div id="content">
+              <!-- Use [class.itemActive] for rest of menu items yourself -->
+                <div class="menuItem itemActive">
+                  <h4 class="itemHeader">Intake</h4>
+                  <br>
+                  <p class="itemPara">To be administered on 1st presentation</p>
+                </div>
+                <div class="menuItem">
+                  <h4 class="itemHeader">Discharge</h4>
+                  <br>
+                  <p class="itemPara">Administered when client exists service</p>
+                </div>
+                <div class="menuItem">
+                  <h4 class="itemHeader">Session Review</h4>
+                  <br>
+                  <p class="itemPara">Administered when client exists service</p>
+                </div>
+              </div>
+        </div>
+      </div>
+
     </ion-menu>
     <ion-router-outlet main></ion-router-outlet>
   </ion-split-pane>
