--- a/src/app/pages/dashboard/assessment/assessment.page.html
+++ b/src/app/pages/dashboard/assessment/assessment.page.html
@@ -1,14 +1,99 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Guthaben:
-    </ion-title>
+
     <ion-buttons>
         <ion-menu-button ></ion-menu-button>
       </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+ 
+ </ion-header>
 
 <ion-content padding>
-
-</ion-content>
+    <div class="Intake-div">
+     <table style="width: 100%;">
+         <tr style="width: 100%">
+          <th style="width: 80%; text-align: left">
+        <h1 class="heading">Intake</h1>
+        </th>
+        <th style="width: 20% ;text-align: right">
+           <i id="icon" class="far fa-edit"></i>
+       </th>
+        </tr>
+       </table>
+     <!-- <ion-row style="margin-top:-10px">
+       <p class="para">To be administered on 1st presentation</p>
+       <ion-button class="btn">Administor</ion-button>
+     </ion-row> -->
+     <table style="width: 100%;">
+    
+          <tr style="width: 100%">
+            <th style="width: 80%; text-align: left">
+               <p class="para">To be administered on 1st presentation</p>
+            </th>
+            <th style="width: 20%">
+               <ion-button class="btn"><ion-icon class="icon1" name="phone-landscape"></ion-icon>Administor</ion-button>
+            </th>
+          </tr>
+     </table>
+     <hr class="hr">
+     <table style="width: 100%;">
+    
+         <tr style="width: 100%">
+           <th style="width: 50%;">
+    
+              <p class="para1"><ion-icon class="icon-para" name="mail"></ion-icon>Email</p>
+           </th>
+           <hr class="hr2">
+           <th style="width: 50%">
+             <p class="para1"><ion-icon class="icon-para" name="time"></ion-icon>Schedule</p>
+           </th>
+         </tr>
+    </table>
+    </div>
+    <br>
+    <h2 class="h2">Intake Assessments</h2>
+    <div class="Assessment-list">
+      <table>
+        <tr>
+        <td>
+        <h2 class="Assessment-list-h2">EPDS</h2>
+         </td>
+         <td>
+        <p class="Assessment-list-para">-Full Unabbreviated Assessment name here</p>
+       </td>
+       </tr>
+       </table>
+       <hr class="hr">
+       <table>
+           <tr>
+           <td>
+           <h2 class="Assessment-list-h2">Audit</h2>
+            </td>
+            <td>
+           <p class="Assessment-list-para">-Full Unabbreviated Assessment name here</p>
+          </td>
+          </tr>
+          </table>
+          <hr class="hr">
+          <table>
+             <tr>
+             <td>
+             <h2 class="Assessment-list-h2">DASS-42</h2>
+              </td>
+              <td>
+             <p class="Assessment-list-para">-Full Unabbreviated Assessment name here</p>
+            </td>
+            </tr>
+            </table>
+            <hr class="hr">
+            <table>
+               <tr>
+               <td>
+               <h2 class="Assessment-list-h2">PCL-5</h2>
+                </td>
+                <td>
+               <p class="Assessment-list-para">-Full Unabbreviated Assessment name here</p>
+              </td>
+              </tr>
+              </table>
+    
+    </div>
+    </ion-content>
