--- a/src/app/pages/dashboard/create-assessment/create-assessment.page.html
+++ b/src/app/pages/dashboard/create-assessment/create-assessment.page.html
@@ -13,7 +13,7 @@
     collection of assessments grouped together<br>
     to save you time.</p>
     <div text-center style="margin-left: auto; margin-right: auto;">
-        <ion-button color="success">Create</ion-button>
+        <ion-button color="success" (click)="presentModal()" >Create</ion-button>
     </div>
 
   </div>
