--- a/src/app/pages/modal2/modal2.component.html
+++ b/src/app/pages/modal2/modal2.component.html
@@ -6,5 +6,58 @@
   <br>
   <ion-searchbar class="search"></ion-searchbar>
 
+  <div class="Assessment-list">
+    <table>
+      <tr>
+      <td>
+      <h2 class="Assessment-list-h2">EPDS</h2>
+       </td>
+       <td>
+      <p class="Assessment-list-para">-Full Unabbreviated Assessment name here</p>
+     </td>
+     </tr>
+     </table>
+     <hr class="hr">
+     <table>
+         <tr>
+         <td>
+         <h2 class="Assessment-list-h2">Audit</h2>
+          </td>
+          <td>
+         <p class="Assessment-list-para">-Full Unabbreviated Assessment name here</p>
+        </td>
+        </tr>
+        </table>
+        <hr class="hr">
+        <table>
+           <tr>
+           <td>
+           <h2 class="Assessment-list-h2">DASS-42</h2>
+            </td>
+            <td>
+           <p class="Assessment-list-para">-Full Unabbreviated Assessment name here</p>
+          </td>
+          </tr>
+          </table>
+          <hr class="hr">
+          <table>
+             <tr>
+             <td>
+             <h2 class="Assessment-list-h2">PCL-5</h2>
+              </td>
+              <td>
+             <p class="Assessment-list-para">-Full Unabbreviated Assessment name here</p>
+            </td>
+            </tr>
+            </table>
+  
+  </div>
+
+  <br>
+
+  <div class="footer">
+    <ion-button color="success">Create</ion-button>
+  </div>
+
   
 </div>
