--- a/src/app/pages/modal2/modal2.component.html
+++ b/src/app/pages/modal2/modal2.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="top">
-    <h3><ion-icon name="arrow-back"></ion-icon>Create Assessment for Intake    <ion-icon (click)="close()" name="close" style="cursor: pointer;" ></ion-icon></h3>
+    <h3><ion-icon name="arrow-back" (click)="back()"></ion-icon>Create Assessment for Intake    <ion-icon (click)="close()" name="close" style="cursor: pointer;" ></ion-icon></h3>
 
   </div>
   <br>
