--- a/src/global.scss
+++ b/src/global.scss
@@ -14,8 +14,8 @@
 
 @media (min-width: 900px) {
     .modal-wrapper{
-        --min-height: 55% !important;
-        --max-height: 80% !important;
+        --min-height: 55% ;
+        --max-height: 80% ;
         --width: 60% !important;
         --border-radius: 5px;
         --background: #f4f4f4 !important;
